Hide toolbar labels on medium screens, to prevent title overlapping buttons

--- a/public/stylesheets/app/editor/toolbar.less
+++ b/public/stylesheets/app/editor/toolbar.less
@@ -171,7 +171,7 @@
 	vertical-align: middle;
 	text-align: left;
 
-	@media (min-width: @screen-sm-min) {
+	@media (min-width: @screen-md-min) {
 		display: inline-block;
 	}
 
